<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/event_card_view"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_08"
    android:clickable="true"
    app:cardBackgroundColor="@color/primaryColor"
    app:cardCornerRadius="@dimen/dimen_20"
    app:cardPreventCornerOverlap="true"
    app:rippleColor="@color/primaryDarkColor"
    app:shapeAppearance="?attr/shapeAppearanceMediumComponent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_20">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:drawablePadding="@dimen/dimen_09"
            android:maxLines="1"
            android:text="@string/dummy_event_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/org_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/org_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_06"
            android:drawableLeft="@drawable/ic_baseline_language"
            android:drawablePadding="@dimen/dimen_09"
            android:text="@string/dummy_org_name"
            android:textColor="@color/white"
            android:maxLines="1"
            android:textSize="@dimen/text_size_12"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/event_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_06"
            android:drawableLeft="@drawable/ic_baseline_date"
            android:drawablePadding="@dimen/dimen_09"
            android:gravity="center_vertical"
            android:text="@string/dummy_date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toTopOf="@id/event_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/event_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_06"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_baseline_location"
            android:drawablePadding="@dimen/dimen_09"
            android:text="@string/dummy_address"
            android:textColor="@color/white"
            android:maxLines="2"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
